trunk/tests/kiama/negative/name_errors/L2/8_forname2.ob
MODULE forname;

VAR
    bvar : INTEGER;

BEGIN
    FOR bvar := 5 TO 6 DO
        avar := 7
    END
END forname.
